--- a/my-app/.gitignore
+++ b/my-app/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+config/
+config.js
 /.pnp
 .pnp.js
 
@@ -21,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+config.js
