--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "browser-router": "^0.2.0",
     "react": "^16.8.6",
+    "react-browser-router": "^2.1.2",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
